--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,11 @@ p {
 img {
   user-select: none;
 }
+.choose-network-wrapper:hover .border-imitate{
+  background: linear-gradient(180deg, rgba(25,251,155,1) 0%, rgba(140,1,250,1) 100%);
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+}
 .choose-network-btn {
   cursor: pointer;
   max-width: 200px;
@@ -13,57 +18,32 @@ img {
   padding: 20px;
 
   border-radius: 32px;
-  border: 0.5px solid #dbdbdb;
-
   background: linear-gradient(
-    180deg,
-    rgba(74, 67, 89, 0.15) 0%,
-    rgba(36, 50, 53, 0.15) 100%
+          180deg,
+          #121215,
+          #121215
   );
-  /* 
-  box-shadow: 0px 8px 40px 0px rgba(0, 0, 0, 0.25) inset,
-    0px 4px 300px 0px rgba(0, 0, 0, 0.25); */
   z-index: 2;
   transition: 0.3s;
+  box-sizing: border-box;
+
 }
 .choose-network-btn:hover {
-  border: 1px solid #19fb9b;
+  /*border: 1px solid #19fb9b;*/
   background: linear-gradient(
     180deg,
-    rgba(31, 31, 31, 0.15) 0%,
-    rgba(160, 160, 160, 0.15) 100%
+    #0f0f10,
+    #202020
   );
+  /*background: #0a0a0a;*/
 
   box-shadow: 0px 4px 50px 0px rgba(93, 216, 179, 0.2);
   box-shadow: 0px 4px 50px 0px rgba(93, 216, 179, 0.2);
 }
-
-/* 
-.choose-network-btn::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  right: 1px;
-  bottom: 1px;
-
-  background-image: linear-gradient(to bottom, #111013, #0c0e0f);
-
-  border-radius: inherit;
-
-  display: block;
-} */
 
 .left-right-border {
   border-left: 1px solid #6b6b72;
   border-right: 1px solid #6b6b72;
-}
-
-.social-bar {
-  position: absolute;
-  left: 40px;
-  top: 80%;
-  transform: translateY(-50%);
 }
 
 .active-black {
