--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,14 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
