--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,50 @@ input[type=number]::-webkit-outer-spin-button {
     text-wrap: balance;
   }
 }
+
+@media screen and (max-height: 900px) and (min-width: 1024px){
+  .no-scroll{
+    overflow: hidden;
+  }
+  .height-scale {
+    /*transform: scale(0.8);*/
+  }
+  .little-scale{
+    transform: scale(0.8);
+  }
+  .hide-small-height{
+    display: none;
+  }
+  .items-start{
+    align-items: flex-start;
+  }
+  .small-fixed{
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .chebu-scale{
+    height: 60vh;
+  }
+}
+@media screen and (max-height: 830px) and (min-width: 1024px){
+  .height-scale {
+    transform: scale(0.9);
+  }
+}
+@media screen and (max-height: 800px) and (min-width: 1024px){
+  .height-scale {
+    transform: scale(0.8) translate(-50px, -50px);
+  }
+}
+@media screen and (max-height: 720px) and (min-width: 1024px){
+  .height-scale {
+    transform: scale(0.7) translate(-100px, -100px);
+  }
+}
+@media screen and (max-height: 500px) and (min-width: 1024px){
+  .height-scale {
+    transform: scale(0.5);
+  }
+}
