--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media screen and (max-height: 900px) and (min-width: 1024px){
+  .responive-height{
+    transform: scale(0.8);
+  }
   .no-scroll{
     overflow: hidden;
   }
