comments and level table

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,7 +125,7 @@ img {
   border-collapse: separate;
   border-spacing: 0 10px;
 
-  color: #ff2a2a;
+  color:  #21db60;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
